# JniDemo

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/inc/: DataBean.h  LogUtil.h  Register.h  com_afei_jnidemo_NativeLibrary.h  log.hpp  st_snpe_api.h  st_snpe_common.h  st_snpe_data.h  st_snpe_util.h
app/src/main/cpp/inc/zdl/BulkSNPE/: BulkSNPE.hpp  RuntimeConfigList.hpp  UserBufferList.hpp
app/src/main/cpp/inc/zdl/DlSystem/: DlError.hpp
app/src/main/cpp/src/: Register.cpp  com_afei_jnidemo_NativeLibrary.cpp
app/src/main/java/com/afei/jnidemo/: DataBean.java  MainActivity.java  NativeLibrary.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
